Fixed text-align when long title, in mobile view

--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -49,9 +49,11 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    text-align: center;
 
     @media screen and (min-width: 768px) {
       justify-content: flex-start;
+      text-align: left;
     }
 
     img {
